# adventofcode

./: Cargo.toml  README  README.md
rust/aoc2021/: Cargo.toml  README
rust/aoc2021/data/day16/: example_input
rust/aoc2021/examples/day1/: main.rs
rust/aoc2021/examples/day11/: main.rs
rust/aoc2021/examples/day12/: main.rs
rust/aoc2021/examples/day13/: main.rs
rust/aoc2021/examples/day14/: main.rs
rust/aoc2021/examples/day15/: main.rs
rust/aoc2021/examples/day16/: main.rs
rust/aoc2021/examples/day17/: main.rs
rust/aoc2021/examples/day18/: main.rs
rust/aoc2021/examples/day19/: main.rs
rust/aoc2021/examples/day2/: main.rs
rust/aoc2021/examples/day20/: main.rs
rust/aoc2021/examples/day22/: main.rs
rust/aoc2021/examples/day24/: main.rs
rust/aoc2021/examples/day25/: main.rs
rust/aoc2021/examples/day3/: main.rs
rust/aoc2021/examples/day4/: main.rs
rust/aoc2021/examples/day5/: main.rs
rust/aoc2021/examples/day6/: main.rs
rust/aoc2021/examples/day8/: main.rs
rust/aoc2021/examples/day9/: main.rs
rust/aoc2021/src/: main.rs
rust/aoc2023/: Cargo.toml  README.md
rust/aoc2023/examples/day01/: main.rs
rust/aoc2023/examples/day02/: main.rs
rust/aoc2023/examples/day03/: main.rs
rust/aoc2023/examples/day04/: main.rs
rust/aoc2023/examples/day05/: main.rs
rust/aoc2023/examples/day06/: main.rs
rust/aoc2023/examples/day07/: main.rs
rust/aoc2023/examples/day08/: main.rs
rust/aoc2023/examples/day09/: main.rs
rust/aoc2023/examples/day10/: main.rs
rust/aoc2023/examples/day11/: main.rs
rust/aoc2023/examples/day12/: main.rs
rust/aoc2023/examples/day13/: main.rs
rust/aoc2023/examples/day14/: main.rs
rust/aoc2023/examples/day15/: main.rs
rust/aoc2023/examples/day16/: main.rs
rust/aoc2023/template/: main.rs
(+52 files in other folders)
