[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.2"
clap = { version = "4.0.29", features = ["derive"] }
