[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
strum = { version = "0.23", features = ["derive"] }
strum_macros = "0.23"
structopt = { version = "0.3", default-features = false }