[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.12.0"
relative-path = "1.7.2"
nom = "7.1.1"
thiserror = "1.0"
num = "0.4.1"
rustworkx-core = "0.13.2"